--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="mt-24 bg-afida-green footer sm:footer-horizontal text-base-content p-10">
+<footer class="bg-afida-green footer sm:footer-horizontal text-base-content p-10 pattern-bg pattern-bg-primary">
   <nav>
     <h6 class="footer-title">Services</h6>
     <%= link_to "Branding", branded_products_path, class: "link link-hover" %>
