--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-full bg-base-100 text-base-content" data-theme="light">
+<html class="h-full bg-base-100 text-base-content pattern-bg pattern-bg-grey" data-theme="light">
   <head>
     <title><%= content_for(:title) %></title>
     <meta name="description" content="<%= content_for(:meta_description) %>">
