--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -27,7 +27,7 @@
     <p>
       Afida &copy; <%= Date.current.year %>
       <br />
-      Providing awesome bamboo technology since 1992.
+      Advocating For Innovative, Disposable Alternatives
     </p>
   </aside>
   <nav class="md:place-self-center md:justify-self-end">
