Tweak pattern bg placement

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
         <path d="m12 8 1-6h2"/>
       </svg>
     </div>
-    <div class="hero-text-side">
+    <div class="hero-text-side pattern-bg pattern-bg-primary pattern-visible">
       <h1 class="hero-heading">
         Make Your Brand<br>
         The Total Package
