--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-afida-green footer sm:footer-horizontal text-base-content p-10 pattern-bg pattern-bg-primary">
+<footer class="bg-afida-green footer sm:footer-horizontal text-base-content p-10 pattern-bg pattern-bg-primary pattern-visible">
   <nav>
     <h6 class="footer-title">Services</h6>
     <%= link_to "Branding", branded_products_path, class: "link link-hover" %>
@@ -21,7 +21,7 @@
   </nav>
 </footer>
 
-<footer class="bg-afida-green footer text-base-content border-base-300 border-t px-10 py-4">
+<footer class="bg-afida-green footer text-base-content px-10 py-4 pattern-bg pattern-bg-primary pattern-visible">
   <aside class="grid-flow-col items-center">
     <%= render "shared/logo" %>
     <p>
