--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -2,7 +2,7 @@
   <div class="flex justify-between items-center mb-6">
     <h1 class="text-3xl font-bold">Products</h1>
     <div class="flex gap-2">
-      <%= link_to "Reorder Products", order_admin_products_path, class: "btn btn-outline" %>
+      <%= link_to "Reorder Products", order_admin_products_path, class: "btn" %>
       <%= link_to "New Product", new_admin_product_path, class: "btn btn-primary" %>
     </div>
   </div>
