Add plus icon to New Category and New Product buttons
Added Heroicon plus icon to visually indicate the create/add action
on both the 'New Category' and 'New Product' buttons.

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -8,7 +8,12 @@
         </svg>
         Reorder Categories
       <% end %>
-      <%= link_to "New Category", new_admin_category_path, class: "btn btn-primary" %>
+      <%= link_to new_admin_category_path, class: "btn btn-primary" do %>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+        </svg>
+        New Category
+      <% end %>
     </div>
   </div>
 
